# bash-commands

./: .gitignore  README.md
cliphistory/: Cargo.toml  README.md
cliphistory/src/: clip_history.rs  clip_model.rs  main.rs
syswatch/: Cargo.toml  README.md
syswatch/src/: main.rs
